@@ -115,6 +115,7 @@ ICO/t/t72cursing.t
 ICO/t/t73curmult.t
 ICO/testimg/combo.ico
 ICO/testimg/pal13232.ico
+ICO/testimg/pal256.ico
 ICO/testimg/pal43232.cur
 ICO/testimg/pal43232.ico
 ICO/testimg/pal43232.ppm
